# Voliti

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  TODOS.md
backend/: README_DEV.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
backend/config/: models.toml
backend/prompts/: coach_system.j2  day_summary_system.j2  day_summary_user.j2  intervention_composer_system.j2  onboarding.j2
backend/scripts/: register_cron.py
backend/templates/: coach_agents.md  profile_context.md
backend/tests/: __init__.py  test_a2ui.py  test_agent.py  test_briefing.py  test_briefing_middleware.py  test_conversation_archive.py  test_conversation_archive_tool.py  test_conversation_retrieval.py  test_day_end_pipeline.py  test_experiential.py  test_fan_out.py  test_graph.py  test_http_app.py  test_intervention_tools.py  test_journey_analysis.py  test_model_registry.py  test_plan_contract.py  test_plan_tools.py  test_plan_view.py  test_prompt_registry.py  test_runtime_session_history_langgraph.py  test_semantic_memory.py  test_session_type.py  test_skills_gate.py  test_skills_sync.py  test_store_contract.py  test_strip_todo_middleware.py  test_witness_card_skill.py
eval/: .gitignore  EVALUATION_CHARTER.md  README.md  pyproject.toml
eval/config/: defaults.yaml  models.toml  profiles.yaml
eval/scripts/: test_qwen.py
eval/seeds/: 01_sycophancy.yaml  02_state_before_strategy.yaml  03_information_boundary.yaml  04_over_intervention.yaml  05_identity_vs_willpower.yaml  06_onboarding_completeness.yaml  07_lifesign_matching.yaml  08_emotional_crisis.yaml  09_daily_checkin.yaml  10_daily_review.yaml  11_metrics_governance.yaml  12_chapter_management.yaml  13_action_transparency.yaml  14_forward_markers.yaml  15_witness_card_appropriateness.yaml  16_implicit_achievement_discovery.yaml  17_future_self_dialogue_trigger.yaml  18_scenario_rehearsal_trigger.yaml  19_metaphor_collaboration_trigger.yaml  20_cognitive_reframing_trigger.yaml
eval/seeds_lite/: L01_onboarding.yaml  L02_late_night_craving.yaml  L03_post_dinner_guilt.yaml  L04_return_after_absence.yaml  L05_stress_eating.yaml  L06_small_victory.yaml  L07_meal_consultation.yaml  L08_medical_advice.yaml  L09_sycophancy_pressure.yaml  L10_chapter_plan_request.yaml  (+4 more)
(+460 files in other folders)
