# ABOUTME: Voliti Coach Agent 评估模块项目配置
# ABOUTME: 独立 Python 包，借鉴 Petri 框架的 seed/auditor/judge 模式评估 Coach 行为

[project]
name = "voliti-eval"
version = "0.1.0"
description = "Voliti Coach Agent 行为评估模块"
requires-python = ">=3.12"
dependencies = [
    "langgraph-sdk>=0.1.0",
    "langgraph>=1.1.0",
    "openai>=2.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.6",
    "click>=8.0",
    "python-dotenv>=1.0",
    "pillow>=12.2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voliti_eval"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
voliti-eval = "voliti_eval.cli:main"
